Moved Certain Autentication code to a library

--- a/AuthenticationService/AuthenticationService.csproj
+++ b/AuthenticationService/AuthenticationService.csproj
@@ -22,9 +22,8 @@
 
   <ItemGroup>
     <Folder Include="Controllers\" />
-    <Folder Include="Manager\" />
+    <Folder Include="Extensions\" />
     <Folder Include="Profiles\" />
-    <Folder Include="Utils\" />
   </ItemGroup>
 
   <ItemGroup>
