Added PostgreSql Migration for Auth service

--- a/AuthenticationService/Dockerfile
+++ b/AuthenticationService/Dockerfile
@@ -8,7 +8,8 @@ EXPOSE 443
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
 COPY ["AuthenticationService/AuthenticationService.csproj", "AuthenticationService/"]
-RUN dotnet restore "AuthenticationService/AuthenticationService.csproj"
+COPY ["AuthServiceClientApi/AuthServiceClientApi.csproj", "AuthServiceClientApi/"]
+RUN dotnet restore "AutheServiceClientApi/AuthServiceClientApi.csproj"
 COPY . .
 WORKDIR "/src/AuthenticationService"
 RUN dotnet build "AuthenticationService.csproj" -c Release -o /app/build
