updated ingress service

--- a/K8s/ingress-srv.yaml
+++ b/K8s/ingress-srv.yaml
@@ -17,6 +17,6 @@ spec:
         path: "/"
         backend:
           service:
-            name: musicdata-clusterip-srv
+            name: musicdata-api-clusterip
             port: 
               number: 80
