Added docker compose for orchestration

--- a/AuthenticationService/AuthenticationService.csproj
+++ b/AuthenticationService/AuthenticationService.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>a8e845b6-6e8b-4cf0-84f1-75c38a9f91d7</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
