--- a/MusicDataService/Dockerfile
+++ b/MusicDataService/Dockerfile
@@ -8,7 +8,7 @@ EXPOSE 443
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
 COPY ["MusicDataService/MusicDataService.csproj", "MusicDataService/"]
-COPY ["AuthServiceClientApi/AuthServiceClientApi.csproj", "AuthServiceClientApi/"]
+COPY ["AuthClientApi/AuthServiceClientApi.csproj", "AuthClientApi/"]
 RUN dotnet restore "MusicDataService/MusicDataService.csproj"
 COPY . .
 WORKDIR "/src/MusicDataService"
@@ -18,6 +18,11 @@ FROM build AS publish
 RUN dotnet publish "MusicDataService.csproj" -c Release -o /app/publish
 
 FROM base AS final
+# Add Ffmpeg to container
+# RUN apt-get update && apt-get install -y software-properties-common
+# RUN add-apt-repository ppa:mc3man/trusty-media
+RUN apt-get update && apt-get install -y ffmpeg
+
 WORKDIR /app
 COPY --from=publish /app/publish .
 ENTRYPOINT ["dotnet", "MusicDataService.dll"]
