--- a/K8s/musicdata-api-svc.yaml
+++ b/K8s/musicdata-api-svc.yaml
@@ -17,7 +17,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: musicdata-api
+  name: musicdata-api-nodeport
 spec:
   type: NodePort
   selector:
