added external volume mount for k8s

--- a/K8s/musicdata-api-depl.yaml
+++ b/K8s/musicdata-api-depl.yaml
@@ -20,3 +20,11 @@ spec:
             value: /usr/bin
           - name: ConnectionStrings__PostgreSql
             value: Host=pgsql-musicdata-clusterip;Port=5432;Username=postgres;Password=postgrespw
+        volumeMounts:
+          - mountPath: /external_data/torrent/TLMC/
+            name: musicdata
+      volumes:
+        - name: musicdata
+          hostPath:
+            path: /external_data/torrent/TLMC/
+            type: Directory
