--- a/K8s/musicdata-pgsql-pv-pvc.yaml
+++ b/K8s/musicdata-pgsql-pv-pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: pgsql-musicdata-pv
+  name: musicdata-pgsql-pv
 spec:
   capacity:
     storage: 5Gi
@@ -16,7 +16,7 @@ spec:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: pgsql-musicdata-pv-claim
+  name: musicdata-pgsql-pv-claim
 spec:
   resources:
     requests:
