--- a/K8s/musicdata-pgsql-svc.yaml
+++ b/K8s/musicdata-pgsql-svc.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: pgsql-musicdata-clusterip
+  name: musicdata-pgsql-clusterip
 spec:
   type: ClusterIP
   selector:
-    app: pgsql-musicdata-depl
+    app: musicdata-pgsql-depl
   ports:
-  - name: pgsql-musicdata-db-port
+  - name: musicdata-pgsql-db-port
     protocol: TCP
     port: 5432
     targetPort: 5432
@@ -17,11 +17,11 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: pgsql-musicdata-nodeport
+  name: musicdata-pgsql-nodeport
 spec:
   type: NodePort
   selector:
-    app: pgsql-musicdata-depl
+    app: musicdata-pgsql-depl
   ports:
   - port: 15432
     targetPort: 5432
@@ -36,9 +36,9 @@ metadata:
 spec:
   type: LoadBalancer
   selector:
-    app: pgsql-musicdata-depl
+    app: musicdata-pgsql-depl
   ports:
-    - name: pgsql-musicdata-db-port
+    - name: musicdata-pgsql-db-port
       protocol: TCP
       port: 15432
       targetPort: 5432
