--- a/MusicDataService/MusicDataService.csproj
+++ b/MusicDataService/MusicDataService.csproj
@@ -25,6 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Dtos\Circle\" />
     <Folder Include="Extensions\" />
     <Folder Include="Profiles\" />
   </ItemGroup>
