--- a/MusicDataService/MusicDataService.csproj
+++ b/MusicDataService/MusicDataService.csproj
@@ -20,13 +20,16 @@
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.15.1" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.5" />
+    <PackageReference Include="SixLabors.ImageSharp" Version="2.1.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     <PackageReference Include="Swashbuckle.AspNetCore.Newtonsoft" Version="6.4.0" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Dtos\Circle\" />
+    <Folder Include="Dtos\Thumbnail\" />
     <Folder Include="Extensions\" />
+    <Folder Include="Utils\" />
     <Folder Include="Profiles\" />
   </ItemGroup>
 
