Added Grpc client for Auth

--- a/MusicDataService/appsettings.json
+++ b/MusicDataService/appsettings.json
@@ -6,5 +6,9 @@
     }
   },
   "AllowedHosts": "*",
-  "FFMpegBinary": "/usr/bin"
+  "FFMpegBinary": "/usr/bin",
+
+  "AuthDataService": {
+    "GrpcUrl": "http://auth-api-clusterip:5000"
+  }
 }
