updated K8s deployment for authentication (untested)

--- a/K8s/ingress-srv.yaml
+++ b/K8s/ingress-srv.yaml
@@ -20,3 +20,10 @@ spec:
             name: musicdata-api-clusterip
             port: 
               number: 80
+      - pathType: Prefix
+        path: "/"
+        backend:
+          service:
+            name: auth-api-clusterip
+            port: 
+              number: 80
