--- a/K8s/ingress-srv.yaml
+++ b/K8s/ingress-srv.yaml
@@ -3,6 +3,8 @@ kind: Ingress
 metadata:
   name: ingress-srv
   annotations:
+    # Uncomment if deploying on Microk8s and comment line 8
+    # kubernetes.io/ingress.class: public
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/use-regex: 'true'
   labels:
@@ -15,6 +17,13 @@ spec:
       paths:
       - pathType: Prefix
         path: "/api/music"
+        backend:
+          service:
+            name: musicdata-api-clusterip
+            port: 
+              number: 80
+      - pathType: Prefix
+        path: "/api/asset"
         backend:
           service:
             name: musicdata-api-clusterip
@@ -34,10 +43,19 @@ spec:
             name: auth-api-clusterip
             port: 
               number: 80
+      
+      # API Explorer
       - pathType: Prefix
-        path: "/swagger"
+        path: "/swagger/auth"
         backend:
           service:
             name: auth-api-clusterip
+            port: 
+              number: 80
+      - pathType: Prefix
+        path: "/swagger/music-data"
+        backend:
+          service:
+            name: musicdata-api-clusterip
             port: 
               number: 80
