--- a/K8s/musicdata-api-depl.yaml
+++ b/K8s/musicdata-api-depl.yaml
@@ -20,11 +20,19 @@ spec:
             value: /usr/bin
           - name: ConnectionStrings__PostgreSql
             value: Host=musicdata-pgsql-clusterip;Port=5432;Username=postgres;Password=postgrespw
+          - name: ThumbnailRoot
+            value: /thumbdata/
       #   volumeMounts:
-      #     - mountPath: /external_data/torrent/TLMC/
+      #     - mountPath: /external_data/torrent/TLMC v2/
       #       name: musicdata
+      #     - mountPath: /thumbdata/
+      #       name: thumbdata
       # volumes:
       #   - name: musicdata
       #     hostPath:
-      #       path: /external_data/torrent/TLMC/
+      #       path: /external_data/torrent/TLMC v2/
+      #       type: Directory
+      #   - name: thumbdata
+      #     hostPath:
+      #       path: /musicdata_api/thumbdata/
       #       type: Directory
