--- a/K8s/PlaylistService/playlist-pgsql-pv-pvc.yaml
+++ b/K8s/PlaylistService/playlist-pgsql-pv-pvc.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: playlist-pgsql-pv
+  namespace: tlmc-player
 spec:
   capacity:
     storage: 5Gi
