--- a/K8s/SearchService/musicsearch-redis-svc.yaml
+++ b/K8s/SearchService/musicsearch-redis-svc.yaml
@@ -9,6 +9,6 @@ spec:
   ports:
   - name: http-redis
     protocol: TCP
-    appProcol: HTTP
+    appProtocol: HTTP
     port: 6379
     targetPort: 6379
