--- a/K8s/PlaylistService/playlist-pgsql-pv-pvc.yaml
+++ b/K8s/PlaylistService/playlist-pgsql-pv-pvc.yaml
@@ -18,6 +18,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: playlist-pgsql-pv-claim
+  namespace: tlmc-player
 spec:
   resources:
     requests:
