--- a/K8s/AuthService/auth-pgsql-svc.yaml
+++ b/K8s/AuthService/auth-pgsql-svc.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: auth-pgsql-clusterip
+  namespace: tlmc-player
 spec:
   type: ClusterIP
   selector:
