--- a/K8s/SearchService/musicsearch-redis-svc.yaml
+++ b/K8s/SearchService/musicsearch-redis-svc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: musicsearch-redis-svc
+  name: musicsearch-redis-clusterip
   namespace: tlmc-player
 spec:
   selector:
