Added support for keycloak authentication

--- a/MusicDataService/appsettings.json
+++ b/MusicDataService/appsettings.json
@@ -6,9 +6,5 @@
     }
   },
   "AllowedHosts": "*",
-  "FFMpegBinary": "/usr/bin",
-
-  "AuthDataService": {
-    "GrpcUrl": "http://auth-api-clusterip:5000"
-  }
+  "FFMpegBinary": "/usr/bin"
 }
