--- a/PlaylistService/PlaylistService.csproj
+++ b/PlaylistService/PlaylistService.csproj
@@ -31,4 +31,8 @@
     <Folder Include="SyncDataService\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\KeycloakAuthProvider\KeycloakAuthProvider.csproj" />
+  </ItemGroup>
+
 </Project>
