Added template of required field in appsettings

--- a/MusicDataService/appsettings.json
+++ b/MusicDataService/appsettings.json
@@ -6,5 +6,11 @@
     }
   },
   "AllowedHosts": "*",
-  "FFMpegBinary": "/usr/bin"
+  "FFMpegBinary": "/usr/bin",
+  "ConnectionStrings:PostgreSql": "",
+  "Keycloak": {
+    "Realm": "",
+    "RealmUrl": "",
+    "RsaPublicKey": ""
+  }
 }
