--- a/K8s/PlaylistService/playlist-api-depl.yaml
+++ b/K8s/PlaylistService/playlist-api-depl.yaml
@@ -14,10 +14,14 @@ spec:
         app: playlist-api
     spec:
       containers:
-      - name: playlist-api
-        image: sqzd269/playlist-api:latest
-        env:
-          - name: ConnectionStrings__PostgreSql
-            value: Host=playlist-pgsql-clusterip.tlmc-player.svc.cluster.local;Port=5432;Username=postgres;Password=postgrespw
-          - name: AuthDataService__JwtPkGetUrl
-            value: http://auth-api-clusterip/api/auth/jwt/key
+        - name: playlist-api
+          image: sqzd269/playlist-api:latest
+          env:
+            - name: ConnectionStrings__PostgreSql
+              value: Host=playlist-pgsql-clusterip.tlmc-player.svc.cluster.local;Port=5432;Username=postgres;Password=postgrespw
+            - name: Keycloak__Realm
+              value: ""
+            - name: Keycloak__RealmUrl
+              value: ""
+            - name: Keycloak__RsaPublicKey
+              value: ""
