--- a/K8s/AuthService/auth-api-svc.yaml
+++ b/K8s/AuthService/auth-api-svc.yaml
@@ -13,3 +13,17 @@ spec:
       protocol: TCP
       targetPort: 80
       appProtocol: TCP
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: keycloak-server-nodeport
+spec:
+  type: NodePort
+  selector:
+    app: keycloak
+  ports:
+    - port: 8080
+      targetPort: 8080
+      nodePort: 30080
