--- a/K8s/MusicDataService/musicdata-pgsql-depl.yaml
+++ b/K8s/MusicDataService/musicdata-pgsql-depl.yaml
@@ -16,17 +16,17 @@ spec:
 
     spec:
       containers:
-      - name: musicdata-pgsql-depl
-        image: postgres:latest
-        ports:
-        - containerPort: 5432
-        env:
-          - name: POSTGRES_PASSWORD
-            value: postgrespw
+        - name: musicdata-pgsql-depl
+          image: postgres:15.4-bullseye
+          ports:
+            - containerPort: 5432
+          env:
+            - name: POSTGRES_PASSWORD
+              value: postgrespw
 
-        volumeMounts:
-          - mountPath: /var/lib/postgresql/data
-            name: postgredb
+          volumeMounts:
+            - mountPath: /var/lib/postgresql/data
+              name: postgredb
 
       volumes:
         - name: postgredb
